--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Raleway', 'Lato', sans-serif;
 }
 
 main {
